--- a/email/src/main/resources/application.properties
+++ b/email/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8080
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/ms-email
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url= jdbc:mysql://138.197.8.249:3333/reabnet?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=aZhe*T2pWb3*Yj
 spring.jpa.hibernate.ddl-auto=update
 
 spring.mail.host=smtp.gmail.com
