--- a/email/src/main/resources/application.properties
+++ b/email/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=sdc.daniel@gmail.com
-spring.mail.password=kgijafelhzcfxgeg
+spring.mail.username=reabnet@gmail.com
+spring.mail.password=dymvgcinwowfydwm
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
